[package]
name = "soul-nft-staking"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/soul_nft_staking.rs"

[dependencies.multiversx-sc]
version = "0.47.3"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.3"

[dev-dependencies.umbrella-oracle-mock]
path = "../mocks/umbrella_oracle_mock"

[dependencies.dex-pair-sc]
path = "../mocks/mock_dex_pair"

[workspace]
members = [
    ".",
    "meta",
]
