[package]
name = "koson-factory-chrysopoeic"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/koson_factory_chrysopoeic.rs"

[dependencies.multiversx-sc]
version = "0.50.5"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.5"

[dependencies.koson-staking-pool]
path = "../../koson-staking-pool"

[dependencies.land-plot-staking]
path = "../../land-plot-staking"

[dependencies.soul-nft-staking]
path = "../../soul-nft-staking"

[workspace]
members = [
    ".",
    "meta",
]
