[package]
name = "koson-factory-universal"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/koson_factory_universal.rs"

[dependencies.multiversx-sc]
version = "0.47.3"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.3"

[dependencies.koson-factory-chrysopoeic]
path = "../koson-factory-chrysopoeic"

[workspace]
members = [
    ".",
    "meta",
]
